# pkgcreator

./: README.md  pyproject.toml  starter.sh
doc/: conf.py
doc/_build/doctrees/: environment.pickle  flowchart.doctree  index.doctree
doc/_build/doctrees/modules/: pkgdeveloper.bash_scripts.doctree  pkgdeveloper.doctree  pkgdeveloper.pkg_structure.doctree  pkgdeveloper.templates.doctree
doc/_build/html/: .buildinfo  flowchart.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt  (+1 more)
doc/modules/: pkgdeveloper.bash_scripts.rst  pkgdeveloper.pkg_structure.rst  pkgdeveloper.templates.rst
doc/modules/bash_rsts_doc/: add_python_doc.rst  bash_style.rst  basics.rst  check_structure.rst  doc_modules.rst  single_g09.rst  starter.rst
doc/modules/bash_rsts_scripts/: bash-template.rst  bash_basic_structure.rst  basics.rst  doc_modules.rst  files_tree.rst  single_g09.rst
doc/tutorials/: tutorial_StartProject.rst  tutorials.rst
src/pkgdeveloper/: basics.sh  utils
src/pkgdeveloper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pkgdeveloper/bash_scripts/: bash-template.sh  find_blocks.sh  single_g09.sh
src/pkgdeveloper/cli/: generate_main.sh  main.py  main_template.py
src/pkgdeveloper/pkg_structure/: add_python_doc.sh  bash_basic_structure.sh  bash_style.sh  check_structure.sh  check_tests.sh  doc_modules.sh  doc_pythonfile.sh  documentation_tools.py  files_tree.sh  python_doc_fixer.sh  start_doc.sh  starter.sh
src/pkgdeveloper/templates/: bash-template.sh  empty_sh.sh
(+87 files in other folders)
